--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@photo-sphere-viewer/gyroscope-plugin": "^5.13.4",
     "@photo-sphere-viewer/plan-plugin": "^5.13.4",
     "@photo-sphere-viewer/stereo-plugin": "^5.13.4",
+    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.536.0",
